--- a/prova/templates/restaurante.html
+++ b/prova/templates/restaurante.html
@@ -5,27 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Restaurante {{ restaurante.get_nome }}</title>
 </head>
 <body>
     <div>
-            <h1>
-            {{restaurante.get_nome}}
-            </h1>
-            <img src="{{ restaurante.get_foto }}">
-            <p>Horário de Funcionamento {{ restaurante.get_hora_funcionamento }}</p>
-            <p>Endereço: {{ restaurante.get_endereco }}</p>
-
-
-            <p>Comentários dos nossos clientes:</p>
-                {% for comentario in restaurante.get_comentarios %}
-                    <div>
-                    <hr>
-                    <p>Cliente: {{ comentario.get_nome }}</p>
-                    <p>Comentário: {{ comentario.get_comentario }}</p>
-                {% endfor %}
-
-                 </div>
+        <h1>
+        {{restaurante.get_nome}}
+        </h1>
+        <img src="{{ restaurante.get_foto }}">
+        <p>Horário de Funcionamento {{ restaurante.get_hora_funcionamento }}</p>
+        <p>Endereço: {{ restaurante.get_endereco }}</p>
+        <p>Comentários dos nossos clientes:</p>
+        <div>
+            {% for comentario in restaurante.get_comentarios %}
+                <hr>
+                <p>Cliente: {{ comentario.get_nome }}</p>
+                <p>Comentário: {{ comentario.get_comentario }}</p>
+            {% endfor %}
+        </div>
     </div>
 </body>
 </html>
