--- a/prova/templates/index.html
+++ b/prova/templates/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
+    <style> {% load static%}</style>
+
 </head>
 <body>
     <h1>Restaurantes em Vassouras</h1>
